# gentoo_sizes

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  main  main.pl  rebar.config
src/: gentoo_dependency_sizes.app.src  gentoo_dependency_sizes_app.erl  gentoo_dependency_sizes_sup.erl  main.c
